--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -1,17 +1,37 @@
+@import "../../styles/responsive.scss";
+
 .chartBox {
   display: flex;
   height: 100%;
+  @include md {
+    flex-direction: column;
+    gap: 20px;
+  }
 
   .boxInfo {
     flex: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @include sm {
+      gap: 10px;
+    }
+    @include md {
+      gap: 10px;
+    }
 
     .title {
       display: flex;
       align-items: center;
       gap: 10px;
+      @include xxl {
+        font-size: 14px;
+      }
+    }
+    h1 {
+      @include xxl {
+        font-size: 16px;
+      }
     }
   }
   .chartInfo {
@@ -32,6 +52,9 @@
     .percentage {
       font-weight: bold;
       font-size: 20px;
+      @include xxl {
+        font-size: 16px;
+      }
     }
     .duration {
       font-size: 14px;
