--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./responsive.scss";
 
 * {
   margin: 0;
@@ -26,4 +27,7 @@ a {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+  @include lg {
+    width: max-content;
+  }
 }
