--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,11 @@ $dark-bg: #222b3c;
 $main-color: white;
 $soft-color: #ddd;
 $dark-color: #2a3447;
+
+$main-bg-light: #9cbdf8;
+$soft-bg-light: #d1def8;
+$dark-bg-light: #9abdfc;
+//TEXT
+$main-color-light: rgb(0, 0, 0);
+$soft-color-light: #2c2b2b;
+$dark-color-light: #9cbdfc;
