--- a/src/components/single/single.scss
+++ b/src/components/single/single.scss
@@ -34,8 +34,17 @@
           font-weight: bold;
           cursor: pointer;
         }
+        .update-btn-light {
+          background-color: #123456;
+          color: #ffffff;
+        }
+        .update-btn-dark {
+          background-color: #ffffff;
+          color: #123456;
+        }
         button:hover {
-          background-color: rgb(243, 192, 192);
+          background-color: #ff7948;
+          color: white;
         }
       }
       .details {
@@ -105,6 +114,7 @@
           min-width: 480px;
           padding: 15px;
           background-color: #f45b6810;
+          border-radius: 24px 0 0 0;
 
           @include md {
             min-width: 250px;
