--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -22,7 +22,8 @@
   .box {
     padding: 20px;
     border-radius: 10px;
-    border: 1px solid $soft-bg;
+    // border: 1px solid $soft-bg;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
   .box-1 {
     grid-column: span 1;
