--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,7 +14,7 @@ a {
 
 .main {
   font-family: "Inter", sans-serif;
-  background-color: $main-bg;
+  // background-color: $main-bg;
   color: $main-color;
 }
 .container {
@@ -26,7 +26,7 @@ a {
 .menuContainer {
   width: 250px;
   padding: 5px 20px;
-  border-right: 2px solid $soft-bg;
+  // border-right: 2px solid $soft-bg;
   @include lg {
     width: max-content;
   }
