Improve signup form validation and autometic login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -66,3 +66,9 @@
   color: #014f69;
   cursor: pointer;
 }
+#errorMsg {
+  width: 80%;
+  text-align: center;
+  margin: 0 auto 9px auto;
+  color: rgb(211, 8, 8);
+}
