--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -139,3 +139,12 @@ form {
     font-size: 1.5rem;
   }
 }
+.error {
+  color: red;
+  font-size: 0.8rem;
+}
+
+.success {
+  color: green;
+  font-size: 0.8rem;
+}
