--- a/src/components/dataTable/dataTable.scss
+++ b/src/components/dataTable/dataTable.scss
@@ -1,10 +1,19 @@
 .dataTable {
+  .css-j9ad5u {
+    height: auto;
+    /* width: 100%; */
+    width: 87%;
+  }
   .dataGrid {
     background: white;
 
     .MuiDataGrid-toolbarContainer {
       flex-direction: row-reverse;
     }
+    .css-1rtad1 {
+      z-index: 0;
+    }
+
     img {
       height: 32px;
       width: 32px;
