--- a/src/components/add/add.scss
+++ b/src/components/add/add.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .add {
   height: 100vh;
@@ -11,7 +12,7 @@
   top: 0;
   left: 0;
   .modal {
-    padding: 50px;
+    padding: 35px;
     border-radius: 10px;
     background: linear-gradient(
       110.6deg,
@@ -20,41 +21,74 @@
       rgb(47, 48, 67) 68.2%,
       rgb(27, 23, 36) 99.1%
     );
+    box-shadow: inset 0px 0px 0px 9px rgb(0 0 0 / 56%);
+    z-index: 6;
     position: relative;
     h1 {
-      margin-bottom: 40px;
+      // margin-bottom: 40px;
       font-size: 24px;
       color: $soft-color;
+      @include md {
+        font-size: 22px;
+      }
+      @include sm {
+        font-size: 20px;
+      }
     }
     .close {
       position: absolute;
       top: 10px;
       right: 10px;
       cursor: pointer;
+      padding: 7px 13px;
+    }
+    .close:hover {
+      background-color: red;
     }
     form {
       display: flex;
       flex-wrap: wrap;
+      width: 65vw;
       max-width: 500px;
       justify-content: space-between;
+      background-color: transparent;
+      box-shadow: none;
+      padding: 4vw;
       .item {
         width: 40%;
         display: flex;
         flex-direction: column;
         gap: 10px;
         margin-bottom: 20px;
+        @include md {
+          width: 45%;
+          gap: 6px;
+          margin-bottom: 12px;
+        }
+        @include sm {
+          gap: 0;
+          margin-bottom: 8px;
+          width: 45%;
+          padding: 0;
+        }
       }
       label {
         font-size: 14px;
+        @include sm {
+          font-size: 12px;
+        }
       }
 
       input {
         padding: 10px;
         background-color: transparent;
-        color: white;
+        color: wheat;
         outline: none;
         border: 1px solid $soft-color;
         border-radius: 3px;
+        @include sm {
+          font-size: 12px;
+        }
       }
       button {
         width: 100%;
@@ -65,6 +99,13 @@
       button:hover {
         background-color: rgb(0, 102, 255);
         color: #ffffff;
+      }
+      .colors-sizes {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        width: 100%;
+        -webkit-text-fill-color: white;
       }
     }
   }
@@ -89,6 +130,9 @@
       }
       button:hover {
         background-color: orangered;
+      }
+      .colors-sizes {
+        -webkit-text-fill-color: #000;
       }
     }
 
