Improve signup page UX, adds image upload, better form validation, dynamically show logged in user

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -54,12 +54,24 @@
       display: flex;
       align-items: center;
       gap: 10px;
-
-      img {
-        width: 26px;
-        height: 26px;
-        border-radius: 50%;
-        object-fit: cover;
+      .profile {
+        display: flex;
+        align-items: center;
+        gap: 7px;
+        img {
+          width: 26px;
+          height: 26px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+        span {
+          @include md {
+            font-size: 13px;
+          }
+          @include sm {
+            font-size: 11px;
+          }
+        }
       }
     }
   }
