--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -13,6 +13,11 @@
     align-items: center;
     font-weight: bold;
     gap: 10px;
+    @include md {
+      img {
+        opacity: 0;
+      }
+    }
   }
   .icons {
     display: flex;
