--- a/src/components/single/single.scss
+++ b/src/components/single/single.scss
@@ -7,6 +7,9 @@
     flex-direction: column;
     gap: 50px;
   }
+  @include sm {
+    gap: 25px;
+  }
 
   .view {
     flex: 1;
@@ -16,6 +19,12 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        @include md {
+          font-size: 0.6rem;
+        }
+        @include sm {
+          font-size: 0.5rem;
+        }
 
         img {
           width: 100px;
@@ -33,6 +42,10 @@
           border: none;
           font-weight: bold;
           cursor: pointer;
+          @include sm {
+            font-size: 12px;
+            padding: 7px 15px;
+          }
         }
         .update-btn-light {
           background-color: #123456;
@@ -49,9 +62,21 @@
       }
       .details {
         font-size: 18px;
+        @include md {
+          font-size: 14px;
+        }
+        @include sm {
+          font-size: 12px;
+        }
 
         .item {
           margin: 30px 0px;
+          @include md {
+            margin: 20px 0px;
+          }
+          @include sm {
+            margin: 10px 0px;
+          }
 
           .itemTitle {
             font-weight: 600;
@@ -88,6 +113,12 @@
 
     h2 {
       margin-bottom: 20px;
+      @include md {
+        font-size: 18px;
+      }
+      @include sm {
+        font-size: 16px;
+      }
     }
 
     ul {
@@ -97,6 +128,9 @@
         width: 1px;
         padding-top: 50px;
         background-color: #f45b69;
+        @include sm {
+          padding-top: 30px;
+        }
 
         &::after {
           content: "";
@@ -115,6 +149,9 @@
           padding: 15px;
           background-color: #f45b6810;
           border-radius: 24px 0 0 0;
+          @include sm {
+            padding: 12px;
+          }
 
           @include md {
             min-width: 250px;
@@ -122,10 +159,20 @@
 
           p {
             margin-bottom: 5px;
+            @include md {
+              font-size: 14px;
+            }
+            @include sm {
+              font-size: 12px;
+            }
           }
 
           time {
             font-size: 12px;
+            color: gray;
+            @include sm {
+              font-size: 11px;
+            }
           }
         }
       }
