--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,13 +27,134 @@ a {
 .menuContainer {
   width: 250px;
   padding: 5px 20px;
-  // border-right: 2px solid $soft-bg;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s;
+  position: relative;
+  z-index: 100;
   @include lg {
     width: max-content;
   }
 }
+
 .container {
   .outletContainer {
     max-width: 92%;
+    @include md {
+      margin: 0 auto;
+    }
   }
+}
+.main .container {
+  .hamburger-menu {
+    width: 30px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    span {
+      display: block;
+      width: 100%;
+      height: 3px;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  .ham-light {
+    span {
+      background-color: #001924;
+    }
+  }
+  .ham-dark {
+    span {
+      background-color: #ffffff;
+    }
+  }
+}
+
+.hamburger-menu.open span:nth-child(1) {
+  transform: translateY(4px) rotate(45deg);
+}
+
+.hamburger-menu.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-menu.open span:nth-child(3) {
+  transform: translateY(-6px) rotate(-45deg);
+}
+
+@media (max-width: 700px) {
+  .menuContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 78px;
+    padding-top: 4rem;
+    box-shadow: 6px 0px 8px 0px rgb(0 0 0 / 38%);
+    background: #fff;
+    z-index: 100;
+    transform: translateX(-100%) scale(0.95);
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 0.7s cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.open {
+      transform: translateX(0) scale(1);
+      opacity: 1;
+      pointer-events: auto;
+      box-shadow: 6px 0px 15px 0px rgb(0 0 0 / 73%);
+    }
+  }
+
+  .menu-light {
+    background: linear-gradient(
+      99.6deg,
+      rgb(209, 227, 255) 10.6%,
+      rgb(242, 227, 234) 32.9%,
+      rgb(234, 202, 213) 52.7%,
+      rgb(220, 227, 239) 72.8%,
+      rgb(185, 205, 227) 81.1%,
+      rgb(154, 180, 212) 102.4%
+    );
+    color: #001924;
+  }
+  .menu-dark {
+    background: #413549;
+    color: #ffffff;
+  }
+  .hamburger-menu {
+    display: flex !important;
+    position: fixed;
+    top: 23px;
+    left: 24px;
+    z-index: 200;
+    /* color: white; */
+    /* background: #ffffff00; */
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    padding: 6px;
+  }
+  .container {
+    padding-left: 0 !important;
+    height: 100vh;
+  }
+}
+
+@media (min-width: 701px) {
+  .hamburger-menu {
+    display: none !important;
+  }
+  .menuContainer {
+    position: relative;
+    transform: none !important;
+    opacity: 1 !important;
+    pointer-events: auto !important;
+    box-shadow: none;
+    background: transparent;
+    height: auto;
+  }
+}
+.main .container .open:hover span {
+  background-color: #c40000;
 }
