--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,9 @@
   justify-content: space-between;
   position: absolute;
   background-color: gray;
+  display: block;
+  width: 100%;
+  text-align: center;
 
   &:first-child {
     font-weight: bold;
