--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -15,13 +15,18 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    max-width: 600px; /* Limit the width of the login container */
+    max-width: 500px; /* Limit the width of the login container */
     background-color: #235; /* White background for contrast */
     padding: 4rem;
     border-radius: 10px; /* Rounded corners for the container */
     // box-shadow: 0px 0px 16px 4px #0e1625; /* Subtle shadow for depth */
+    @include md {
+      max-width: 400px; /* Adjust max-width for medium screens */
+      padding: 3rem;
+    }
     @include sm {
       padding: 2rem; /* Adjust padding for smaller screens */
+      max-width: 332px;
     }
     hr {
       width: 90%;
@@ -43,10 +48,10 @@
   text-align: center;
   color: #fffc70;
   @include md {
-    font-size: 1.5rem; /* Adjust font size for smaller screens */
+    font-size: 1.4rem; /* Adjust font size for smaller screens */
   }
   @include sm {
-    font-size: 18px; /* Adjust font size for smaller screens */
+    font-size: 1.2rem; /* Adjust font size for smaller screens */
   }
 }
 
@@ -58,30 +63,36 @@
   max-width: 400px;
   border-radius: 20px;
   box-shadow: none;
+  @include xl {
+    width: 90%;
+  }
 }
 
 .login form p {
   margin-bottom: 0.5rem;
-  font-size: 1.3rem;
+  font-size: medium;
   color: #fffc70; /* Light text color for labels */
   @include md {
-    font-size: 1.2rem; /* Adjust font size for smaller screens */
+    font-size: 14px; /* Adjust font size for medium screens */
   }
   @include sm {
-    font-size: 12px; /* Adjust font size for smaller screens */
+    font-size: 11px; /* Adjust font size for smaller screens */
     margin-bottom: 0;
   }
 }
 
 .login form input {
-  padding: 1rem;
+  padding: 0.5rem;
   border: 1px solid #ddd;
   border-radius: 31px;
-  margin-bottom: 1rem;
-  font-size: large;
+  margin-bottom: 0.7rem;
+  font-size: medium;
+  @include md {
+    font-size: 13px; /* Adjust font size for medium screens */
+  }
   @include sm {
-    padding: 0.7rem;
-    font-size: small;
+    padding: 0.5rem;
+    font-size: 11px;
   }
   &:focus {
     outline: none;
@@ -89,16 +100,18 @@
   }
 }
 .login form button {
-  padding: 1.2rem 2rem;
+  padding: 0.6rem 1rem;
   border: none;
   border-radius: 30px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: medium;
   font-weight: bold;
-
   transition: background-color 0.2s ease;
+  @include md {
+    font-size: 13px; /* Adjust font size for medium screens */
+  }
   @include sm {
-    padding: 0.7rem 1.5rem;
+    padding: 0.5rem 1.5rem;
     font-size: 12px;
   }
 }
